Fix scrollbars

--- a/assets/css/discord.css
+++ b/assets/css/discord.css
@@ -23,7 +23,3 @@
     -webkit-backface-visibility: hidden;
     -webkit-perspective: 1000px;
 }
-
-[class^="scrollableContainer"] {
-    overflow-y: hidden !important;
-}
